# cargo-distirbute

./: Cargo.toml  Makefile.toml  README.md
.github/workflows/: release-cargo-distribute-cargodist.yml  release.yml
src/: lib.rs  main.rs
src/lib/: mod.rs  scoop.rs
src/lib/templates/: release.yml
src/templates/: formula.rb  release.yml
