[package]
name = "cargo-distribute"
version = "0.202106.16"
authors = ["fuyutarow"]
edition = "2018"
description = "Template generator for continuous distribution of rust projects to homebrew, linuxbrew and scoop"
homepage = "https://github.com/fuyutarow/cargo-distribute"
repository = "https://github.com/fuyutarow/cargo-distribute.git"
license = "MIT"

[lib]
name = "cli"
path = "src/lib/mod.rs"

[dependencies]
anyhow = "1.0.40"
cargo_toml = "0.9.1"
colored = "2.0.0"
convert_case = "0.4.0"
serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "1.0.64"
structopt = "0.3.21"
tera = "1.9.0"
toml = "0.5.8"
